# spidermonkey

./: .gitignore  Cargo.toml  GECKO_DEV_COMMIT  filters.txt
patches/: 0001-Bug-1583854-Allow-builds-with-the-10.15-macOS-SDK.-r.patch  0002-Bug-1611326-Default-to-py3_action-and-add-a-py2-attr.patch  0003-Bug-1613263-Use-io.open-rather-than-open-in-mozbuild.patch  0004-Bug-1613823-Add-a-pairwise-function-based-on-itertoo.patch  0019-Don-t-use-internal-encoding_c_mem-header.patch  (+26 more)
spidermonkey_src/: Cargo.toml  build.rs
spidermonkey_src/mozjs/: Makefile.in  README  configure.py  moz.build
spidermonkey_src/mozjs/config/: rules.mk
spidermonkey_src/mozjs/js/: moz.configure
spidermonkey_src/mozjs/js/src/: old-configure  old-configure.in
spidermonkey_src/mozjs/js/src/builtin/: Profilers.cpp  TestingFunctions.cpp
spidermonkey_src/mozjs/js/src/frontend/: moz.build
spidermonkey_src/mozjs/js/src/jit/: CacheIRSpewer.cpp  JitSpewer.cpp  ProcessExecutableMemory.cpp  moz.build
spidermonkey_src/mozjs/js/src/util/: StructuredSpewer.h
spidermonkey_src/mozjs/js/src/vm/: CodeCoverage.cpp  TraceLoggingGraph.cpp
spidermonkey_src/mozjs/mfbt/: GuardObjects.h  moz.build
spidermonkey_src/mozjs/python/mozbuild/mozbuild/: base.py  util.py
spidermonkey_src/mozjs/python/mozbuild/mozbuild/backend/: fastermake.py  recursivemake.py
spidermonkey_src/mozjs/python/mozbuild/mozbuild/compilation/: warnings.py
spidermonkey_src/mozjs/python/mozbuild/mozbuild/frontend/: context.py  data.py  emitter.py
spidermonkey_src/mozjs/python/mozbuild/mozbuild/test/backend/: test_build.py
(+1 files in other folders)
