[package]
name = "spidermonkey_src"
version = "0.1.0"
authors = ["Anthony Ramine <nox@nox.paris>"]
edition = "2018"
publish = false

[build-dependencies]
which = { version = "3.1.1", default-features = false }

[dependencies]
encoding_c = "0.9.7"
encoding_c_mem = "0.2.5"
libc = "0.2"
libz-sys = "1"
